--- a/fe-jeopardy/src/app/auth/password-reset/password-reset.component.html
+++ b/fe-jeopardy/src/app/auth/password-reset/password-reset.component.html
@@ -33,7 +33,7 @@
             </ul>
         </div>
         <div class='flex-row'>
-            <button (click)="resetPassword()">Reset Password</button>
+            <button (click)="updatePassword()">Reset Password</button>
         </div>
     </div>
 </div>
