--- a/fe-jeopardy/src/app/auth/pw-req/pw-req.component.html
+++ b/fe-jeopardy/src/app/auth/pw-req/pw-req.component.html
@@ -1,6 +1,6 @@
 <div>
     <span>
-        {{passwordRequirement}}
+        {{requirement}}
     </span>
     <span>
         <ion-icon style='color: red;' *ngIf='!satisfied' name="alert-circle-outline"></ion-icon>
