--- a/fe-jeopardy/src/app/auth/register/register.component.less
+++ b/fe-jeopardy/src/app/auth/register/register.component.less
@@ -2,8 +2,7 @@
     gap: 1em;
     margin-bottom: 1em;
 
-    #name-inputs,
-    #password-inputs {
+    #name-inputs {
         gap: 1em;
     }
 
@@ -35,39 +34,6 @@
     #img-upload {
         input {
             margin-right: 1em;
-        }
-    }
-
-
-    #password {
-        gap: 1em;
-
-        ul,
-        p {
-            margin: 0;
-        }
-
-        #password-inputs {
-            div {
-                display: flex;
-            }
-
-            #password {
-                align-items: center;
-                justify-content: center;
-                position: relative;
-
-                ion-icon {
-                    font-size: 1.5em;
-                    position: absolute;
-                    right: 0.5em;
-                }
-
-                ion-icon:hover {
-                    cursor: pointer;
-                    transform: scale(1.1);
-                }
-            }
         }
     }
 }
