--- a/fe-jeopardy/src/app/auth/register/register.component.html
+++ b/fe-jeopardy/src/app/auth/register/register.component.html
@@ -17,40 +17,8 @@
             <div class='flex-row'>
                 <input (focus)="emailBorder('1px solid grey')" #emailInput [(ngModel)]="email" type="email" autocomplete="email" placeholder="Email">
             </div>
-            <div id='password' class='flex-column'>
-                <div id='password-inputs' class='flex-row'>
-                    <div id='password'>
-                        <input (focus)="passwordsBorder('1px solid grey')" #passwordInput [(ngModel)]="password" type="password" autocomplete="new-password" placeholder="Password">
-                        <ion-icon *ngIf='showEye' (click)='showPassword(true)' name='eye-outline'></ion-icon>
-                        <ion-icon *ngIf='!showEye' (click)='showPassword(false)' name='eye-off-outline'></ion-icon>
-                    </div>
-                    <div>
-                        <input (focus)="passwordsBorder('1px solid grey')" #confirmedPasswordInput [(ngModel)]="confirmedPassword" type="password"  autocomplete="new-password" placeholder="Confirm password">
-                    </div>
-                </div>
-                <div id='password-requirements'>
-                    <p>
-                        Password requirements:
-                    </p>
-                    <ul>
-                        <li>
-                            <app-pw-req [satisfied]='password.length > 7' [passwordRequirement]="'At least 8 characters long'"></app-pw-req>
-                        </li>
-                        <li>
-                            <app-pw-req [satisfied]="hasUppercase()" [passwordRequirement]="'At least one uppercase letter'"></app-pw-req>
-                        </li>
-                        <li>
-                            <app-pw-req [satisfied]="hasLowercase()" [passwordRequirement]="'At least one lowercase letter'"></app-pw-req>
-                        </li>
-                        <li>
-                            <app-pw-req [satisfied]="hasNumber()" [passwordRequirement]="'At least one number'"></app-pw-req>
-                        </li>
-                        <li>
-                            <app-pw-req [satisfied]="hasSpecialChar()" [passwordRequirement]="'At least one special character'"></app-pw-req>
-                        </li>
-                    </ul>
-                </div>
-
+            <div>
+                <app-new-password [inputFlexDirection]="'flex-row'"></app-new-password>
             </div>
         </div>    
     </div>
