--- a/fe-jeopardy/src/app/auth/auth-button/auth-button.component.html
+++ b/fe-jeopardy/src/app/auth/auth-button/auth-button.component.html
@@ -6,8 +6,9 @@
 			<ion-icon *ngIf="iconName == 'sign-out'" name="log-out-outline"></ion-icon>
 			<ion-icon *ngIf="iconName == 'sign-in'" name="log-in-outline"></ion-icon>
 			<ion-icon *ngIf="iconName == 'profile'" name="person-outline"></ion-icon>
+			<ion-icon *ngIf="iconName == 'email'" name="mail-outline"></ion-icon>
 		</div>
-		<div>
+		<div style='text-align: left'>
 			<span>{{buttonText}}</span>
 		</div>
 	</div>
