--- a/fe-jeopardy/src/app/auth/register/register.component.less
+++ b/fe-jeopardy/src/app/auth/register/register.component.less
@@ -1,43 +1,33 @@
-#register-inputs {
+.flex-column,
+.flex-row {
     gap: 1em;
-    margin-bottom: 1em;
-
-    #name-inputs {
-        gap: 1em;
-    }
-
-    .user-img {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        min-width: 2.5em;
-
-        img:hover,
-        ion-icon:hover {
-            transform: scale(1.1);
-            cursor: pointer;
-        }
-
-        img {
-            width: 2.5em;
-            height: 2.5em;
-            object-fit: cover;
-            border-radius: 50%;
-            border: 1px solid black;
-        }
-
-        ion-icon {
-            font-size: 2.5em;
-        }
-    }
-
-    #img-upload {
-        input {
-            margin-right: 1em;
-        }
-    }
 }
 
-#register-buttons {
-    gap: 1em;
+h3 {
+    margin: 0;
+}
+
+.user-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 2.5em;
+
+    img:hover,
+    ion-icon:hover {
+        transform: scale(1.1);
+        cursor: pointer;
+    }
+
+    img {
+        width: 2.5em;
+        height: 2.5em;
+        object-fit: cover;
+        border-radius: 50%;
+        border: 1px solid black;
+    }
+
+    ion-icon {
+        font-size: 2.5em;
+    }
 }
