--- a/fe-jeopardy/src/app/profile/profile.component.html
+++ b/fe-jeopardy/src/app/profile/profile.component.html
@@ -1,31 +1,41 @@
-<div *ngIf='user'  id='profile-container'>
-    <div class='flex-row'>
-        <div id='profile-side-panel' class='flex-column'>
+<div *ngIf='user'  id='profile-container' class='flex-row'>
+    <div id='profile-side-panel' class='flex-column profile-panel'>
+        <div>
+            <img [src]="user.imgUrl" alt="">
+            <p class='link' (click)='showImgUpload = !showImgUpload'>Change profile picture</p>
+        </div>
+        <div *ngIf='showImgUpload'>
+            <input #userImg (change)='changeProfilePicture($event)' type="file" accept=".jpg, .jpeg, .png">
+        </div>
+        <div *ngIf='!editName' class='profile-username'>
+            <p style='font-size: 2em;'>{{ user.name }}</p>
             <div>
-                <img [src]="user.imgUrl" alt="">
-                <p class='link' (click)='showImgUpload = !showImgUpload'>Change profile picture</p>
-            </div>
-            <div *ngIf='showImgUpload'>
-                <input #userImg (change)='changeProfilePicture($event)' type="file" accept=".jpg, .jpeg, .png">
-            </div>
-            <div>
-                <p style='font-size: 2em;'>{{ user.name }}</p>
-            </div>
-            <div>
-                <p>{{ user.email }}</p>
-            </div>
-            <div>
-                <p>Date joined: {{ user.dateJoined }}</p>
-            </div>
-            <div>
-                <p class='link' (click)='showPasswordReset = !showPasswordReset'>Reset password</p>
-            </div>
-            <div *ngIf='showPasswordReset'>
-                <button (click)='sendPasswordResetEmail()'>Click here to reset your password</button>
+                <ion-icon (click)='editUserName(true)' name='pencil-outline'></ion-icon>
             </div>
         </div>
-        <div id='profile-main-panel'>
-            <p>Player stats coming soon</p>
+        <div *ngIf='editName' class='profile-username'>
+            <input type='text' [(ngModel)]='user.name'>
+            <div>
+                <ion-icon (click)='editUserName(false)' name='close-outline'></ion-icon>
+            </div>
+            <div>
+                <ion-icon (click)='updateUserName()' name='checkmark-outline'></ion-icon>
+            </div>
         </div>
+        <div>
+            <p>{{ user.email }}</p>
+        </div>
+        <div>
+            <p>Date joined: {{ user.dateJoined }}</p>
+        </div>
+        <div>
+            <p class='link' (click)='showPasswordReset = !showPasswordReset'>Reset password</p>
+        </div>
+        <div *ngIf='showPasswordReset'>
+            <button (click)='sendPasswordResetEmail()'>Click here to reset your password</button>
+        </div>
+    </div>
+    <div id='profile-main-panel' class='profile-panel'>
+        <p>Player stats coming soon</p>
     </div>
 </div>
