--- a/fe-jeopardy/src/app/profile/profile.component.less
+++ b/fe-jeopardy/src/app/profile/profile.component.less
@@ -22,6 +22,7 @@
         .link {
             color: blue;
             user-select: none;
+            margin-bottom: 0.5em;
         }
 
         .link:hover {
