--- a/fe-jeopardy/src/app/profile/profile.component.less
+++ b/fe-jeopardy/src/app/profile/profile.component.less
@@ -2,10 +2,15 @@
     margin-top: calc(var(--header-height));
     padding: 2em;
     gap: 0.5em;
+    min-height: calc(100vh - var(--header-height) - 4em);
 
     #profile-side-panel {
         flex-grow: 0;
         gap: 1em;
+
+        div {
+            flex-grow: 0;
+        }
 
         p {
             margin: 0;
