--- a/fe-jeopardy/src/styles.less
+++ b/fe-jeopardy/src/styles.less
@@ -147,3 +147,14 @@ button:hover {
         }
     }
 }
+
+.link {
+    color: blue;
+    user-select: none;
+    margin-bottom: 0.5em;
+}
+
+.link:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
