--- a/fe-jeopardy/src/app/auth/login/login.component.less
+++ b/fe-jeopardy/src/app/auth/login/login.component.less
@@ -29,7 +29,7 @@
         }
 
         #reset-button {
-            padding: 0.5em 0.75em;
+            padding: 0.5em;
             margin-top: 0.5em;
         }
     }
