--- a/fe-jeopardy/src/app/auth/register/register.component.less
+++ b/fe-jeopardy/src/app/auth/register/register.component.less
@@ -31,3 +31,11 @@ h3 {
         font-size: 2.5em;
     }
 }
+
+#user-img-input {
+    align-self: flex-end;
+
+    input {
+        padding: 0.5em;
+    }
+}
