--- a/fe-jeopardy/src/app/profile/profile.component.html
+++ b/fe-jeopardy/src/app/profile/profile.component.html
@@ -31,7 +31,7 @@
         <div>
             <p class='link' (click)='showPasswordReset = !showPasswordReset'>Reset password</p>
             <div *ngIf='showPasswordReset'>
-                <button (click)='sendPasswordResetEmail()'>Click here to reset your password</button>
+                <button (click)='sendPasswordResetEmail()'>Send password reset email</button>
             </div>
         </div>
     </div>
