--- a/fe-jeopardy/src/app/profile/profile.component.less
+++ b/fe-jeopardy/src/app/profile/profile.component.less
@@ -24,6 +24,11 @@
             border: 0.75em solid lightgrey;
         }
 
+        input,
+        button {
+            padding: 0.5em;
+        }
+
         .profile-username {
             display: flex;
             align-items: center;
@@ -57,6 +62,10 @@
                     color: green;
                 }
             }
+        }
+
+        .link {
+            margin-bottom: 0.5em;
         }
     }
 
