--- a/fe-jeopardy/src/styles.less
+++ b/fe-jeopardy/src/styles.less
@@ -157,3 +157,16 @@ button:hover {
     cursor: pointer;
     text-decoration: underline;
 }
+
+.icon-text {
+    display: flex;
+    gap: 0.25em;
+
+    p {
+        flex-grow: 1
+    }
+
+    div {
+        flex-grow: 0;
+    }
+}
