--- a/fe-jeopardy/src/app/profile/profile.component.html
+++ b/fe-jeopardy/src/app/profile/profile.component.html
@@ -33,12 +33,8 @@
             <div *ngIf='showPasswordReset'>
                 <button (click)='sendPasswordResetEmail()'>
                     <div class='icon-text'>
-                        <div>
-                            <ion-icon name="paper-plane-outline"></ion-icon>
-                        </div>
-                        <p>
-                            Send password reset email
-                        </p>
+                        <div><ion-icon name="paper-plane-outline"></ion-icon></div>
+                        <p>Send password reset email</p>
                     </div>
                 </button>
             </div>
