--- a/fe-jeopardy/src/app/auth/login/login.component.html
+++ b/fe-jeopardy/src/app/auth/login/login.component.html
@@ -16,12 +16,8 @@
                 </p>
                 <button (click)='sendPasswordResetEmail()' *ngIf='showSendReset' id='reset-button'>
                     <div class='icon-text'>
-                        <div>
-                            <ion-icon name="paper-plane-outline"></ion-icon>
-                        </div>
-                        <p>
-                            Send password reset email
-                        </p>
+                        <div><ion-icon name="paper-plane-outline"></ion-icon></div>
+                        <p>Send password reset email</p>
                     </div>
                 </button>
             </div>
