--- a/fe-jeopardy/src/app/auth/new-password/new-password.component.html
+++ b/fe-jeopardy/src/app/auth/new-password/new-password.component.html
@@ -10,25 +10,13 @@
         </div>
     </div>
     <div id='password-requirements'>
-        <p>
-            Password requirements:
-        </p>
+        <p>Password requirements:</p>
         <ul>
-            <li>
-                <app-pw-req [satisfied]='password.length > 7' [requirement]="'At least 8 characters long'"></app-pw-req>
-            </li>
-            <li>
-                <app-pw-req [satisfied]="hasUppercase()" [requirement]="'At least one uppercase letter'"></app-pw-req>
-            </li>
-            <li>
-                <app-pw-req [satisfied]="hasLowercase()" [requirement]="'At least one lowercase letter'"></app-pw-req>
-            </li>
-            <li>
-                <app-pw-req [satisfied]="hasNumber()" [requirement]="'At least one number'"></app-pw-req>
-            </li>
-            <li>
-                <app-pw-req [satisfied]="hasSpecialChar()" [requirement]="'At least one special character'"></app-pw-req>
-            </li>
+            <li><app-pw-req [satisfied]='password.length > 7' [requirement]="'At least 8 characters long'"></app-pw-req></li>
+            <li><app-pw-req [satisfied]="hasUppercase()" [requirement]="'At least one uppercase letter'"></app-pw-req></li>
+            <li><app-pw-req [satisfied]="hasLowercase()" [requirement]="'At least one lowercase letter'"></app-pw-req></li>
+            <li><app-pw-req [satisfied]="hasNumber()" [requirement]="'At least one number'"></app-pw-req></li>
+            <li><app-pw-req [satisfied]="hasSpecialChar()" [requirement]="'At least one special character'"></app-pw-req></li>
         </ul>
     </div>
 </div>
