--- a/fe-jeopardy/src/app/profile/profile.component.html
+++ b/fe-jeopardy/src/app/profile/profile.component.html
@@ -9,25 +9,15 @@
         </div>
         <div *ngIf='!editName' class='profile-username'>
             <p style='font-size: 2em;'>{{ user.name }}</p>
-            <div>
-                <ion-icon (click)='showEditName(true)' name='pencil-outline'></ion-icon>
-            </div>
+            <div><ion-icon (click)='showEditName(true)' name='pencil-outline'></ion-icon></div>
         </div>
         <div *ngIf='editName' class='profile-username'>
             <input type='text' [(ngModel)]='editedUserName'>
-            <div>
-                <ion-icon (click)='showEditName(false)' name='close-outline'></ion-icon>
-            </div>
-            <div>
-                <ion-icon (click)='updateUserName()' name='checkmark-outline'></ion-icon>
-            </div>
+            <div><ion-icon (click)='showEditName(false)' name='close-outline'></ion-icon></div>
+            <div><ion-icon (click)='updateUserName()' name='checkmark-outline'></ion-icon></div>
         </div>
-        <div>
-            <p>{{ user.email }}</p>
-        </div>
-        <div>
-            <p>Date joined: {{ user.dateJoined }}</p>
-        </div>
+        <div><p>{{ user.email }}</p></div>
+        <div><p>Date joined: {{ user.dateJoined }}</p></div>
         <div>
             <p class='link' (click)='showPasswordReset = !showPasswordReset'>Reset password</p>
             <div *ngIf='showPasswordReset'>
