--- a/fe-jeopardy/src/app/auth/new-password/new-password.component.less
+++ b/fe-jeopardy/src/app/auth/new-password/new-password.component.less
@@ -1,20 +1,17 @@
-.flex-row,
-.flex-column {
+#password-input-container {
     gap: 1em;
-}
 
+    #password-inputs {
+        gap: 1em;
 
-.modal-container {
-    p {
-        margin: 0;
-    }
+        div {
+            display: flex;
+        }
 
-    #login-inputs {
         #password {
             align-items: center;
             justify-content: center;
             position: relative;
-            margin-bottom: 0.5em;
 
             ion-icon {
                 font-size: 1.5em;
@@ -27,10 +24,13 @@
                 transform: scale(1.1);
             }
         }
+    }
 
-        #reset-button {
-            padding: 0.5em;
-            margin-top: 0.5em;
+    #password-requirements {
+
+        p,
+        ul {
+            margin: 0;
         }
     }
 }
