--- a/fe-jeopardy/src/app/auth/pw-req/pw-req.component.html
+++ b/fe-jeopardy/src/app/auth/pw-req/pw-req.component.html
@@ -1,7 +1,5 @@
 <div>
-    <span>
-        {{passwordRequirement}}
-    </span>
+    <span>{{requirement}}</span>
     <span>
         <ion-icon style='color: red;' *ngIf='!satisfied' name="alert-circle-outline"></ion-icon>
         <ion-icon style='color: green;' *ngIf='satisfied' name="checkmark-circle-outline"></ion-icon>
