--- a/fe-jeopardy/src/styles.less
+++ b/fe-jeopardy/src/styles.less
@@ -147,3 +147,26 @@ button:hover {
         }
     }
 }
+
+.link {
+    color: blue;
+    user-select: none;
+}
+
+.link:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.icon-text {
+    display: flex;
+    gap: 0.25em;
+
+    p {
+        flex-grow: 1
+    }
+
+    div {
+        flex-grow: 0;
+    }
+}
