--- a/fe-jeopardy/src/app/app.component.html
+++ b/fe-jeopardy/src/app/app.component.html
@@ -4,6 +4,11 @@
 	</div>
 	<div id='header-icons' class='flex-row'>
 		<div>
+			<a href="/">
+				<ion-icon name="home-outline"></ion-icon>
+			</a>
+		</div>
+		<div>
 			<ion-icon (click)="modal.displayInstructions()" name="information-circle-outline"></ion-icon>
 		</div>
 		<div>
@@ -23,10 +28,11 @@
 				<div *ngIf="!userAuthenticated"  class='flex-column'>
 					<app-auth-button (click)="signIn('google')"  [buttonText]="'Sign in with Google'" [imgUrl]="'../../../assets/google.png'"></app-auth-button>
 					<app-auth-button (click)="signIn('github')"  [buttonText]="'Sign in with GitHub'" [imgUrl]="'../../../assets/github.png'"></app-auth-button>
-					<app-auth-button (click)="startLogin()"  [buttonText]="'Sign in with email&nbsp;&nbsp;&nbsp;'" [imgUrl]="''" [iconName]="'sign-in'"></app-auth-button>
-					<app-auth-button (click)="startRegistration()"  [buttonText]="'Create an account&nbsp;&nbsp;'" [imgUrl]="''" [iconName]="'sign-up'"></app-auth-button>
+					<app-auth-button (click)="startLogin()"  [buttonText]="'Sign in with email'" [imgUrl]="''" [iconName]="'email'"></app-auth-button>
+					<app-auth-button (click)="startRegistration()"  [buttonText]="'Create an account'" [imgUrl]="''" [iconName]="'sign-up'"></app-auth-button>
 				</div>
-				<div *ngIf="userAuthenticated">
+				<div *ngIf="userAuthenticated" class='flex-column'>
+					<app-auth-button (click)="goToProfile()" [buttonText]="'Profile'" [imgUrl]="''" [iconName]="'profile'"></app-auth-button>
 					<app-auth-button (click)="signOut()" [buttonText]="'Sign out'" [imgUrl]="''" [iconName]="'sign-out'"></app-auth-button>
 				</div>
 			</div>
