--- a/fe-jeopardy/src/app/join/join.component.html
+++ b/fe-jeopardy/src/app/join/join.component.html
@@ -42,4 +42,4 @@
     <button (click)="rejoin()">Disconnected? Click to rejoin</button>
 </div>
 
-<app-config *ngIf="modal.showConfig()" [userAuthenticated]="userAuthenticated" [playerName]="playerName" [playerImg]="playerImg" [oneRoundChecked]="oneRoundChecked" [twoRoundChecked]="twoRoundChecked" [penaltyChecked]="penaltyChecked"></app-config>
+<app-config *ngIf="modal.showConfig()" [userAuthenticated]="userAuthenticated" [playerEmail]='playerEmail' [playerName]="playerName" [playerImg]="playerImg" [oneRoundChecked]="oneRoundChecked" [twoRoundChecked]="twoRoundChecked" [penaltyChecked]="penaltyChecked"></app-config>
