--- a/fe-jeopardy/src/app/profile/profile.component.less
+++ b/fe-jeopardy/src/app/profile/profile.component.less
@@ -71,6 +71,16 @@
 
     #profile-main-panel {
         flex-grow: 1;
+        gap: 1em;
+
+        div {
+            flex-grow: 0;
+
+            h4,
+            p {
+                margin: 0.5em 0;
+            }
+        }
     }
 
     .profile-panel {
