--- a/fe-jeopardy/src/app/app.component.html
+++ b/fe-jeopardy/src/app/app.component.html
@@ -21,17 +21,17 @@
 		</div>
 		<div style='position: relative;'>
 			<div (click)="showAuthOptions = !showAuthOptions">
-				<ion-icon *ngIf="!userAuthenticated" name="log-in-outline"></ion-icon>
-				<img *ngIf="userAuthenticated" [src]="playerImg" alt="">
+				<ion-icon *ngIf="!user.authenticated" name="log-in-outline"></ion-icon>
+				<img *ngIf="user.authenticated" [src]="user.imgUrl" alt="">
 			</div>
 			<div *ngIf="showAuthOptions" id="auth-options" [@slideDownUp]>
-				<div *ngIf="!userAuthenticated"  class='flex-column'>
+				<div *ngIf="!user.authenticated"  class='flex-column'>
 					<app-auth-button (click)="signIn('google')"  [buttonText]="'Sign in with Google'" [imgUrl]="'../../../assets/google.png'"></app-auth-button>
 					<app-auth-button (click)="signIn('github')"  [buttonText]="'Sign in with GitHub'" [imgUrl]="'../../../assets/github.png'"></app-auth-button>
 					<app-auth-button (click)="startLogin()"  [buttonText]="'Sign in with email'" [imgUrl]="''" [iconName]="'email'"></app-auth-button>
 					<app-auth-button (click)="startRegistration()"  [buttonText]="'Create an account'" [imgUrl]="''" [iconName]="'sign-up'"></app-auth-button>
 				</div>
-				<div *ngIf="userAuthenticated" class='flex-column'>
+				<div *ngIf="user.authenticated" class='flex-column'>
 					<app-auth-button (click)="goToProfile()" [buttonText]="'Profile'" [imgUrl]="''" [iconName]="'profile'"></app-auth-button>
 					<app-auth-button (click)="signOut()" [buttonText]="'Sign out'" [imgUrl]="''" [iconName]="'sign-out'"></app-auth-button>
 				</div>
