--- a/fe-jeopardy/src/app/link-join/link-join.component.html
+++ b/fe-jeopardy/src/app/link-join/link-join.component.html
@@ -1,5 +1,5 @@
 <div class='join-container flex-column'>
-    <input type="text" [(ngModel)]="playerName" placeholder="Enter your name">
+    <input type="text" [(ngModel)]="user.name" placeholder="Enter your name">
     <div class='flex-row'>
         <button (click)="joinGame()">Join game</button>
     </div>
