--- a/fe-jeopardy/src/app/profile/profile.component.html
+++ b/fe-jeopardy/src/app/profile/profile.component.html
@@ -45,7 +45,7 @@
                 <p>Correct answers: {{ analytics.correct }}/{{ analytics.answers }} ({{ analytics.correctPercentage }}%)</p>    
             </div>
             <div>
-                <h4>All-time highs</h4>
+                <h4>All-time Highs</h4>
                 <p>Points: ${{analytics.maxPoints }}</p>
                 <p>Correct answers: {{ analytics.maxCorrect }}</p>
             </div>
