--- a/fe-jeopardy/src/app/profile/profile.component.html
+++ b/fe-jeopardy/src/app/profile/profile.component.html
@@ -1,24 +1,26 @@
-<div *ngIf='user'  id='profile-container' class='flex-row'>
+<div *ngIf='profileUser'  id='profile-container' class='flex-row'>
     <div id='profile-side-panel' class='flex-column profile-panel'>
         <div>
-            <img [src]="user.imgUrl" alt="">
-            <p class='link' (click)='showImgUpload = !showImgUpload'>Change profile picture</p>
-            <div *ngIf='showImgUpload'>
-                <input #userImg (change)='changeProfilePicture($event)' type="file" accept=".jpg, .jpeg, .png">
+            <img [src]="profileUser.imgUrl" alt="">
+            <div *ngIf='user.email == profileUser.email'>
+                <p class='link' (click)='showImgUpload = !showImgUpload'>Change profile picture</p>
+                <div *ngIf='showImgUpload'>
+                    <input #userImg (change)='changeProfilePicture($event)' type="file" accept=".jpg, .jpeg, .png">
+                </div>
             </div>
         </div>
         <div *ngIf='!editName' class='profile-username'>
-            <p style='font-size: 2em;'>{{ user.name }}</p>
-            <div><ion-icon (click)='showEditName(true)' name='pencil-outline'></ion-icon></div>
+            <p style='font-size: 2em;'>{{ profileUser.name }}</p>
+            <div *ngIf='user.email == profileUser.email'><ion-icon (click)='showEditName(true)' name='pencil-outline'></ion-icon></div>
         </div>
-        <div *ngIf='editName' class='profile-username'>
+        <div *ngIf='editName && user.email == profileUser.email' class='profile-username'>
             <input type='text' [(ngModel)]='editedUserName'>
             <div><ion-icon (click)='showEditName(false)' name='close-outline'></ion-icon></div>
             <div><ion-icon (click)='updateUserName()' name='checkmark-outline'></ion-icon></div>
         </div>
-        <div><p>{{ user.email }}</p></div>
-        <div><p>Date joined: {{ user.dateJoined }}</p></div>
-        <div>
+        <div><p>{{ profileUser.email }}</p></div>
+        <div><p>Date joined: {{ profileUser.dateJoined }}</p></div>
+        <div *ngIf='user.email == profileUser.email'>
             <p class='link' (click)='showPasswordReset = !showPasswordReset'>Reset password</p>
             <div *ngIf='showPasswordReset'>
                 <button (click)='sendPasswordResetEmail()'>
@@ -31,7 +33,7 @@
         </div>
     </div>
     <div id='profile-main-panel' class='profile-panel flex-column'>
-        <div *ngIf='playSomeGames'>
+        <div *ngIf='playSomeGames && user.email == profileUser.email'>
             <p>No player analytics found. Play some games to start generating analytics.</p>
         </div>
         <div *ngIf='analytics'>
