--- a/fe-jeopardy/src/app/app.component.html
+++ b/fe-jeopardy/src/app/app.component.html
@@ -12,7 +12,7 @@
 			<ion-icon (click)="modal.displayInstructions()" name="information-circle-outline"></ion-icon>
 		</div>
 		<div>
-			<ion-icon (click)="modal.displayAnalytics()" name="bar-chart-outline"></ion-icon>
+			<ion-icon (click)="router.navigate(['/leaderboards'])" name="list-outline"></ion-icon>
 		</div>
 		<div>
 			<a target="_blank" href='https://docs.google.com/forms/d/e/1FAIpQLSdzHFumIhdsgNksr8lDUO3hHhVwaIqeO9asIhBWsroNfYZW4Q/viewform'>
