--- a/fe-jeopardy/src/app/profile/profile.component.less
+++ b/fe-jeopardy/src/app/profile/profile.component.less
@@ -75,8 +75,17 @@
 
         div {
             flex-grow: 0;
+        }
 
-            h4,
+        #player-analytics {
+            gap: 2em;
+
+            h2,
+            p {
+                font-size: 1.5em;
+                margin: 0;
+            }
+
             p {
                 margin: 0.5em 0;
             }
