--- a/fe-jeopardy/src/app/game/player-podium/player-podium.component.less
+++ b/fe-jeopardy/src/app/game/player-podium/player-podium.component.less
@@ -13,6 +13,7 @@
         height: 2.5em;
         border-radius: 50%;
         object-fit: cover;
+        border: 1px solid black;
     }
 
     .player-name {
@@ -28,10 +29,12 @@
                 opacity: 1;
                 font-weight: 900;
             }
+
             50% {
                 opacity: 1;
                 font-weight: 400
             }
+
             100% {
                 transform: translateY(-3em);
                 opacity: 0;
@@ -56,16 +59,22 @@
         10% {
             transform: translate(0, 0) rotate(-10deg);
         }
+
         20% {
             transform: translate(0, 0) rotate(15deg);
         }
+
         30% {
             transform: translate(0, 0) rotate(-15deg);
         }
+
         40% {
             transform: translate(0, 0) rotate(10deg);
         }
-        0%, 50%, 100% {
+
+        0%,
+        50%,
+        100% {
             transform: translate(0, 0) rotate(0);
         }
     }
