--- a/fe-jeopardy/src/app/game/chat/chat.component.less
+++ b/fe-jeopardy/src/app/game/chat/chat.component.less
@@ -37,6 +37,11 @@
 
             .message-username {
                 font-weight: bold;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                max-width: 180px;
+                display: inline-block;
             }
 
             .message-time {
