--- a/fe-jeopardy/src/app/game/game.component.html
+++ b/fe-jeopardy/src/app/game/game.component.html
@@ -23,6 +23,8 @@
 
 <app-chat></app-chat>
 
+<app-reactions></app-reactions>
+
 <div id='game-controls'>
 	<div id='jeopardy-music' class='game-control'>
 		<ion-icon (click)="stopMusic()" *ngIf="playMusic" name="volume-high-outline"></ion-icon>
