end reactions connects allow disputing answers in non-penalty games disable adding bots in a full game

--- a/fe-jeopardy/src/app/answers/answers.component.html
+++ b/fe-jeopardy/src/app/answers/answers.component.html
@@ -7,7 +7,7 @@
         <span *ngIf="answer.answer == 'answer-timeout'">
             didn't answer in time
         </span>
-        <button class='dispute-button' *ngIf="answer.player.id == player.Id() && game.CanInitDispute(player.Id()) && game.Penalty() && game.RecvPick()" (click)="disputeQuestion()">
+        <button class='dispute-button' *ngIf="answer.player.id == player.Id() && game.CanInitDispute(player.Id()) && game.RecvPick()" (click)="disputeQuestion()">
             Dispute
         </button>
     </li>
